express/blocks/browse-by-category/browse-by-category.css
main .browse-by-category {
  max-width: max-content;
}

main .browse-by-category .carousel-container .carousel-platform {
  align-items: flex-start;
}

main .browse-by-category.card .carousel-container .carousel-platform {
  gap: 14px;
}

main .browse-by-category .carousel-container .button.carousel-arrow {
  position: absolute;
  top: 46px;
}

main .browse-by-category .browse-by-category-heading-section {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  padding-left: 28px;
  padding-right: 28px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 10px;
}

main .browse-by-category.card .browse-by-category-category {
  position: relative;
  display: flex;
  gap: 8px;
  flex-direction: column;
  align-items: start;
  min-width: 123px;
  margin: 0;
}

main
  .browse-by-category
  .browse-by-category-heading-section
  .browse-by-category-heading {
  text-align: left;
  font-size: 28px;
  line-height: 30px;
}

main
  .browse-by-category
  .browse-by-category-heading-section
  .browse-by-category-link-wrapper {
  margin: 8px 0 0;
}

main .browse-by-category .browse-by-category-link {
  font-size: 16px;
  line-height: 22px;
  display: flex;
  padding: 0;
  white-space: nowrap;
  width: max-content;
}

main .browse-by-category .browse-by-category-link::after {
  display: flex;
  width: 6px;
  height: 6px;
  border-top-width: 0;
  border-left-width: 0;
  border-bottom-width: 2px;
  border-right-width: 2px;
  border-style: solid;
  border-color: var(--color-info-accent);
  transform-origin: 75% 75%;
  transform: rotate(-45deg);
  content: "";
  margin-top: 5px;
  margin-left: 5px;
  margin-right: 2.25px;
}

main .browse-by-category .browse-by-category-category {
  position: relative;
  display: flex;
  gap: 8px;
  flex-direction: column;
  align-items: center;
  min-width: 123px;
  margin: 0;
  padding: 10px 8px 0 8px;
}

main .browse-by-category .browse-by-category-category-anchor {
  position: absolute;
  height: 100%;
  width: 100%;
}

main
  .browse-by-category
  .browse-by-category-category-anchor:hover
  ~ .browse-by-category-category-image-wrapper
  img {
  transform: scale(1.1) matrix(1, -0.07, 0.07, 1, 0, 0);
}

main .browse-by-category .browse-by-category-category-image-wrapper {
  background-color: var(--color-gray-200);
  min-height: 90px;
  width: 148px;
  border-radius: 90px;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

main
  .browse-by-category:not(.card)
  .browse-by-category-category-image-wrapper
  img {
  display: block;
  object-fit: cover;
  width: 80px;
  height: 80px;
  transform: matrix(1, -0.07, 0.07, 1, 0, 0);
  box-shadow: 0 0 6px #0000001f;
  border-radius: 8px;
  opacity: 1;
  transition: transform 0.2s ease-in-out;
}

main
  .browse-by-category
  .browse-by-category-category-image-wrapper
  .browse-by-category-category-image-shadow {
  position: absolute;
  width: 76px;
  height: 76px;
  transform: matrix(0.97, -0.22, 0.22, 0.97, -6, 0);
  background: var(--color-gray-300) 0 0 no-repeat padding-box;
  border-radius: 10px;
  opacity: 1;
}

main
  .browse-by-category.card
  .browse-by-category-category-image-shadow-wrapper {
  display: block;
  object-fit: cover;
  transform: matrix(1, -0.07, 0.07, 1, 0, 0);
  box-shadow: 0 0 6px #0000001f;
  border-radius: 8px;
  opacity: 1;
  transition: transform 0.2s ease-in-out;
}

main .browse-by-category.card .browse-by-category-category-image-wrapper {
  background-color: #f8f8f8;
  min-height: 90px;
  height: 116px;
  width: 182px;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

main .browse-by-category.card .browse-by-category-category-image-wrapper img {
  display: block;
  object-fit: cover;
  max-width: 135px;
  height: 82px;
  transform: matrix(1, -0.07, 0.07, 1, 0, 0);
  box-shadow: 0 0 6px #0000001f;
  border-radius: 8px;
  opacity: 1;
  transition: transform 0.2s ease-in-out;
}

main
  .browse-by-category.card
  .browse-by-category-category-image-wrapper
  .browse-by-category-category-image-shadow {
  position: absolute;
  width: 100%;
  height: 100%;
  transform: matrix(0.97, -0.22, 0.24, 0.97, -13, 0);
  background: #d6d6d6e5;
  border-radius: 10px;
  opacity: 1;
  transition: transform 0.2s ease-in-out;
}

main .browse-by-category .browse-by-category-category-title {
  margin: 0;
  font-size: 18px;
  line-height: 24px;
  font-weight: 700;
  max-width: 148px;
}

@media (min-width: 900px) {
  main .browse-by-category .browse-by-category-heading-section {
    flex-direction: row;
    padding: 0;
  }

  main .browse-by-category .browse-by-category-wrapper {
    padding: 0 28px;
    max-width: none;
  }
}

@media (min-width: 1200px) {
  main .browse-by-category {
    padding: 0 28px;
    max-width: none;
  }
}

